Closed
Bug 1024405
Opened 11 years ago
Closed 11 years ago
[Flame] Video element cannot be used when we go back to homescreen and back to app
Categories
(Core :: Audio/Video, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| b2g-v1.4 | --- | unaffected |
| b2g-v2.0 | --- | unaffected |
| b2g-v2.1 | --- | verified |
People
(Reporter: johnhu, Assigned: cpearce)
References
Details
(Keywords: regression)
Attachments
(5 files)
I haven't dig into the source. This happens to Gallery app, Video app, and Browser app with Youtube website.
In gallery app, the following message can be found at console:
E/GeckoConsole( 7439): [JavaScript Error: "TypeError: Value being assigned to HTMLMediaElement.currentTime is not a finite floating-point value." {file: "app://gallery.gaiamobile.org/js/frame_scripts.js" line: 1376}]
STR:
1. open gallery, video, or browser
2. play a video
3. press home
4. open app again and play the video again.
Logcat can be found at attachment.
| Reporter | ||
Comment 1•11 years ago
|
||
| Reporter | ||
Comment 2•11 years ago
|
||
| Reporter | ||
Comment 3•11 years ago
|
||
| Reporter | ||
Comment 4•11 years ago
|
||
The version information:
Gaia 508c85713fdf35eb2b3c8e8340e1d2ee306e6aec
Gecko https://hg.mozilla.org/mozilla-central/rev/4876594bacaa
BuildID 20140611160203
Version 33.0a1
ro.build.version.incremental=94
ro.build.date=Tue May 20 09:29:20 CST 2014
Summary: Video element cannot be used when we go back to homescreen and back to app → [Flame] Video element cannot be used when we go back to homescreen and back to app
Comment 5•11 years ago
|
||
This sounds like a regression. Can we check 2.0 & 1.4?
blocking-b2g: --- → backlog
Component: Gaia → Video/Audio
Keywords: qawanted
Product: Firefox OS → Core
Version: unspecified → Trunk
Updated•11 years ago
|
QA Contact: ckreinbring
Comment 6•11 years ago
|
||
It seems Bug 1024324 or Bug 1029094.
Comment 7•11 years ago
|
||
This issue does not repro on Flame 2.0 or Flame 1.4
2.0 Flame
Build ID: 20140625000201
Gecko: https://hg.mozilla.org/releases/mozilla-aurora/rev/79712bd7b60d
Gaia: de77f794db22a45f9d575de2c6e266a30a50de3b
Platform Version: 32.0a2
Firmware Version: v1.2.2
User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0
1.4 Flame
Build ID: 20140625000201
Gecko: https://hg.mozilla.org/releases/mozilla-b2g30_v1_4/rev/cddf88f78632
Gaia: c9416de14acf9e94ab006619cd2418c768422fcb
Platform Version: 30.0
Firmware Version: v1.2.2
User Agent: Mozilla/5.0 (Mobile; rv:30.0) Gecko/30.0 Firefox/30.0
Actual Result: When the user relaunches the app and taps the Play button, the video resumes.
QA Whiteboard: [QAnalyst-Triage?]
status-b2g-v1.4:
--- → unaffected
status-b2g-v2.0:
--- → unaffected
Flags: needinfo?(jmitchell)
Comment 8•11 years ago
|
||
Qa-Wanted: Let's also check in the latest Master with the Latest base
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(jmitchell)
Comment 9•11 years ago
|
||
This issue partially reproduces on the latest Flame 2.1
Build ID: 20140627040205
Gecko: https://hg.mozilla.org/mozilla-central/rev/9290d7995f98
Gaia: b8f36518696f3191a56e4f33447ee9d6ec820da1
Platform Version: 33.0a1
Firmware Version: v122
User Agent: Mozilla/5.0 (Mobile; rv:33.0) Gecko/33.0 Firefox/33.0
Actual result: User cannot resume the video that was playing on the Gallery and Browser app. On the Video app, the video feed can be resumed once the app is relaunched.
Updated•11 years ago
|
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(jmitchell)
Updated•11 years ago
|
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
status-b2g-v2.1:
--- → affected
Flags: needinfo?(jmitchell)
Keywords: qawanted → regression
Comment 10•11 years ago
|
||
Nomming for 2.1 blocker - issue is a regression with a significant user impact
blocking-b2g: backlog → 2.1?
Comment 11•11 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #6)
> It seems Bug 1024324 or Bug 1029094.
Are you saying that this bug is caused by one of those two bugs? Or are you saying something else?
Flags: needinfo?(sotaro.ikeda.g)
Comment 12•11 years ago
|
||
(In reply to Jason Smith [:jsmith] from comment #11)
> (In reply to Sotaro Ikeda [:sotaro] from comment #6)
> > It seems Bug 1024324 or Bug 1029094.
>
> Are you saying that this bug is caused by one of those two bugs? Or are you
> saying something else?
Yes. Both bugs are regressions of Bug 979104.
Flags: needinfo?(sotaro.ikeda.g)
Comment 13•11 years ago
|
||
Chris - Can you take a look when you get the chance? This appears to be a regression from the work done in bug 979104.
Flags: needinfo?(cpearce)
| Assignee | ||
Comment 14•11 years ago
|
||
Of course. I can reproduce this on my Otoro. I believe the problem is that I was not discarding enqueued samples when we make decoders dormant.
Flags: needinfo?(cpearce)
| Assignee | ||
Comment 15•11 years ago
|
||
Flush the samples enqueued in the state machine when we make decoders dormant. We use the same code path that we use when shutting down decoders, to ensure that there's no samples left alive waiting to be delivered in the task queues too.
This patch fixes the issue for me on the Otoro.
Assignee: nobody → cpearce
Attachment #8447774 -
Flags: review?(kinetik)
Updated•11 years ago
|
Attachment #8447774 -
Flags: review?(kinetik) → review+
| Assignee | ||
Comment 16•11 years ago
|
||
Comment 17•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Updated•11 years ago
|
Comment 19•11 years ago
|
||
Switching the 2.1?->2.1+, on these fixed bugs as these are regression.
Nothing to land here, its just flag-cleanup of 2.1? list. Please Ni me if there is confusion/disagreement.
blocking-b2g: 2.1? → 2.1+
This issue is verified fixed on today's Flame 2.1
When playing a video, then tapping the home button, then re-opening the app the video is played in, the user can play the video without any issues. This has been verified in Gallery, Video, and Browser apps.
Flame 2.1 KK (319mb) (Full Flash)
Device: Flame 2.1 KK (319mb) (Full Flash)
BuildID: 20141012001201
Gaia: d18e130216cd3960cd327179364d9f71e42debda
Gecko: 610ee0e6a776
Gonk: 52c909e821d107d414f851e267dedcd7aae2cebf
Version: 34.0a2 (2.1)
Firmware: V180
User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Updated•11 years ago
|
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
Comment 21•11 years ago
|
||
(In reply to Derek Harris [:DerekH] from comment #20)
> This issue is verified fixed on today's Flame 2.1
>
> When playing a video, then tapping the home button, then re-opening the app
> the video is played in, the user can play the video without any issues. This
> has been verified in Gallery, Video, and Browser apps.
Great to hear that. Thanks Derek!
You need to log in
before you can comment on or make changes to this bug.
Description
•