Bug 1024405 - Discard enqueued samples when making video decoders dormant. r=kinetik